efrain-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpressefrain
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpressefrain
    tier: frontend
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpressefrain
  labels:
    app: wordpressefrain
spec:
  selector:
    matchLabels:
      app: wordpressefrain
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpressefrain
        tier: frontend
    spec:
      containers:
      - image: wordpress:5.5.1-php7.2-apache
        name: wordpressefrain
        ports:
        - containerPort: 80
          name: wordpressefrain
        volumeMounts:
        - name: wordpress-persistent-storage-efrain
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage-efrain
        persistentVolumeClaim:
          claimName: efs-claim-efrain
