wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "12h"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: www.demofpt.tk
      http:
        paths:
          - backend:
              serviceName: wordpress
              servicePort: 80
    - host: www.efrain.tk
      http:
        paths:
          - backend:
              serviceName: wordpressefrain
              servicePort: 80
